1일차 마무리 커밋

--- a/필기.md
+++ b/필기.md
@@ -38,3 +38,11 @@
   <mark>검색 앤진 최적화(SEO)</mark>: <em>구글과 같은 검색 엔진이 페이지 구조를 더 잘 파악</em>
   <mark>코드 가독성 향상</mark>: <em>다른 개발자가 봤을 때도 구조와 의미를 파악하기 쉬움</em>
   <mark>미래 호환성 확보</mark>: <em>HTML5 이후부터 의미 기반 문서 구조가 중요한 기준이 됨</em>
+
+- a태그
+- 페이지 내 원하는 태그로 이동
+
+  - 이동하고자 하는 태그 속성에 `id ="[아이디이름]"` 부여
+  - `<a href='[아이디이름]'></a>`
+
+-
